# hello-java-jni

./: README.md
Skia_Application/: settings.gradle
Skia_Application/app/: build.gradle
Skia_Application/app/src/androidTest/java/com/example/skia_application/: ExampleInstrumentedTest.java
Skia_Application/app/src/main/: AndroidManifest.xml  CMakeLists.txt
Skia_Application/app/src/main/bindings/: native-lib.cpp  native-lib.h
Skia_Application/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Skia_Application/app/src/main/cpp/static_lib/: math_add.cpp  math_add.h
Skia_Application/app/src/main/java/com/example/skia_application/: MainActivity.java  MainActivity的副本.java  SkiaJNI.java  SkiaView.java
Skia_Application/app/src/main/res/layout/: activity_main.xml
Skia_Application/app/src/main/res/values/: strings.xml  themes.xml
Skia_Application/app/src/main/res/values-night/: themes.xml
Skia_Application/app/src/test/java/com/example/skia_application/: ExampleUnitTest.java
Skia_Application/gradle/wrapper/: gradle-wrapper.properties
